--- a/Proyek_Analisis_Data.ipynb
+++ b/Proyek_Analisis_Data.ipynb
@@ -6,10 +6,11 @@
         "id": "H9wADwK78DCz"
       },
       "source": [
-        "# Proyek Analisis Data: [Input Nama Dataset]\n",
-        "- **Nama:** [Input Nama]\n",
-        "- **Email:** [Input Email]\n",
-        "- **ID Dicoding:** [Input Username]"
+        "# Proyek Analisis Data: [Air Quality Dataset]\n",
+        "- **Nama:** [Rizky Bagas Kurniawan]\n",
+        "- **Email terdaftar :** [rizkybagas557@gmail.com]\n",
+        "- **Email Coding Camp :** [mc200d5y1106@student.devacademy.id]\n",
+        "- **ID Dicoding:** [MC200D5Y1106]"
       ]
     },
     {
@@ -27,8 +28,10 @@
         "id": "GmQeQ5YF8DC0"
       },
       "source": [
-        "- Pertanyaan 1\n",
-        "- Pertanyaan 2"
+        "- Bagaimana korelasi antara berbagai polutan (PM2.5, PM10, SO2, NO2, CO, O3)?\n",
+        "- Bagaimana arah angin (wd) mempengaruhi distribusi polutan?\n",
+        "- Apakah ada hubungan antara kecepatan angin (WSPM) dan tingkat polusi udara?\n",
+        "- Bagaimana kualitas udara pada masing masing stasiun?"
       ]
     },
     {
@@ -42,12 +45,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "FVYwaObI8DC1"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sn"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -74,7 +82,9 @@
         "id": "zjCBk1BI8DC1"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "Aotizhongxin_df = pd.read_csv(\"E:\\OneDrive - Universitas Diponegoro\\Programming Code\\Proyek\\proyek analisis data\\Data\\PRSA_Data_Aotizhongxin_20130301-20170228.csv\")"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -287,7 +297,15 @@
       "name": "python3"
     },
     "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
       "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
       "version": "3.9.21"
     },
     "orig_nbformat": 4
